SERVER-13517 Specialize operator<< for BSONType for std::ostream, LogstreamBuilder, and StringBuilder