src/mongo/bson/util/builder.h
@@ -41,6 +41,7 @@
 #include "mongo/base/data_view.h"
 #include "mongo/base/disallow_copying.h"
 #include "mongo/base/string_data.h"
+#include "mongo/bson/bsontypes.h"
 #include "mongo/bson/inline_decls.h"
 #include "mongo/platform/decimal128.h"
 #include "mongo/stdx/type_traits.h"
@@ -409,6 +410,10 @@ public:
     }
     StringBuilderImpl& operator<<(StringData str) {
         append(str);
+        return *this;
+    }
+    StringBuilderImpl& operator<<(BSONType type) {
+        append(typeName(type));
         return *this;
     }
 
